Angular Design polished; Grafana, Prometheus and Kibana configured

--- a/webapp/src/app/footer/footer.component.html
+++ b/webapp/src/app/footer/footer.component.html
@@ -1,3 +1,7 @@
-<footer class="shadow">
-  <small>Copyright by Julian B&uuml;cher &copy; 2021</small>
+<footer class="footer shadow">
+  <div class="d-flex justify-content-center">
+    <span class="muted-text small">
+      Copyright by Julian B&uuml;cher &copy; 2021
+    </span>
+  </div>
 </footer>
